--- a/index.html
+++ b/index.html
@@ -3,6 +3,119 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test API Data</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Nihon Mystica</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
+<body>
+    <header>
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-6">
+                    <h1 class="logo">Nihon Mystica</h1>
+                </div>
+                <div class="col-6 text-end">
+                    <nav>
+                        <ul class="nav">
+                            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Games</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
+                        </ul>
+                        <div class="login-download">
+                            <a href="#">Login</a> | <a href="#">Download Nihon.net</a>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="banner">
+            <div class="container">
+                <h2>Browse Games</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>
+            </div>
+        </section>
+
+        <section class="carousel-section">
+            <div id="gameCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/40ce0eb5a493a22036dd38853e55a0b2.png" class="d-block w-100" alt="Game 1">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Blossoms of Fate</h5>
+                            <p>Explore the echoes of samurai legends in this breathtaking RPG.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/ede207095a48f0b2ccc60fe9916fbb4e.jpg" class="d-block w-100" alt="Game 2">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Samurai’s Echo</h5>
+                            <p>Unveil the secrets of a long-forgotten world.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/tokyo-ghoul-wallpaper-1920x1080-v0-kebt8gaksey91.webp" class="d-block w-100" alt="Game 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Koi Legends</h5>
+                            <p>Dive into a mystical journey through koi-filled waters.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#gameCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#gameCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <section class="products">
+            <div class="container">
+                <h2>Our Products</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 address">
+                    <p>400 University Drive Suite 200 Coral Gables, FL 33134 USA</p>
+                </div>
+                <div class="col-md-6 text-end footer-links">
+                    <a href="#">Payment Options</a> |
+                    <a href="#">Returns</a> |
+                    <a href="#">Privacy Policies</a>
+                </div>
+            </div>
+            <div class="row newsletter">
+                <div class="col-12 text-center">
+                    <p>Newsletter</p>
+                    <form>
+                        <input type="email" placeholder="Enter Your Email Address" class="form-control w-50 mx-auto">
+                        <button type="submit" class="btn btn-primary mt-2">SUBSCRIBE</button>
+                    </form>
+                </div>
+            </div>
+            <div class="row copyright">
+                <div class="col-12 text-center">
+                    <p>© 2023 Nihon Mystica. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
