images for home page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <div class="carousel-item active">
                         <img src="images/40ce0eb5a493a22036dd38853e55a0b2.png" class="d-block w-100" alt="Game 1">
                         <div class="carousel-caption d-none d-md-block">
+                            <pre class="code-block">
+                                hello world!
+                            </pre>
                             <h5>Blossoms of Fate</h5>
                             <p>Explore the echoes of samurai legends in this breathtaking RPG.</p>
                         </div>
@@ -84,6 +87,36 @@
                 <h2>Our Products</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>
             </div>
+            <div class="container">
+                <div class="row align-items-start">
+                  <div class="col">
+                    <img src="images/Image 1.png" class="img-thumbnail" alt="...">
+                  </div>
+                  <div class="col">
+                    <img src="images/Image 2.png" class="img-thumbnail" alt="...">
+                  </div>
+                  <div class="col">
+                    <img src="images/Image 3.png" class="img-thumbnail" alt="...">
+                  </div>
+                  <div class="col">
+                    <img src="images/Image 4.png" class="img-thumbnail" alt="...">
+                  </div>
+                </div>
+                <div class="row align-items-center">
+                  <div class="col">
+                    <img src="images/Image 5.png" class="img-fluid" alt="...">
+                  </div>
+                  <div class="col">
+                    <img src="images/Image 6.png" class="img-fluid" alt="...">
+                  </div>
+                  <div class="col">
+                    <img src="images/Image 7.png" class="img-fluid" alt="...">
+                  </div>
+                  <div class="col">
+                    <img src="images/Image 8.png" class="img-fluid" alt="...">
+                  </div>
+                </div>
+              </div>
         </section>
     </main>
 
