--- a/index.html
+++ b/index.html
@@ -15,16 +15,29 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-6">
-                    <h1 class="logo">Nihon Mystica</h1>
+                    <img src="images/logo.png" class="img-fluid" alt="...">
                 </div>
                 <div class="col-6 text-end">
                     <nav>
                         <ul class="nav">
                             <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link">Games</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Anime</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">
+                                  
+                                  Watchlist
+                                  <img src="images/Watchlist icon.png" alt="Watchlist Icon" style="width: 16px; height: 16px; margin-right: 5px;">
+                                </a>
+                              </li>
+                              <div class="search-container">
+                                <input type="text" placeholder="Search..." class="search-input">
+                                <button type="submit" class="search-button">
+                                    <img src="images/search icon.png" alt="Search" class="search-icon">
+                                </button>
+                              </div>                              
                         </ul>
                         <div class="login-download">
                             <a href="#">Login</a> | <a href="#">Download Nihon.net</a>
@@ -38,7 +51,7 @@
     <main>
         <section class="banner">
             <div class="container">
-                <h2>Browse Games</h2>
+                <h2>Browse Anime</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>
             </div>
         </section>
@@ -84,39 +97,40 @@
 
         <section class="products">
             <div class="container">
-                <h2>Our Products</h2>
+                <h2>Recent Releases</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>
             </div>
             <div class="container">
                 <div class="row align-items-start">
                   <div class="col">
-                    <img src="images/Image 1.png" class="img-thumbnail" alt="...">
+                    <img src="images/jujutsu kaisen.jpe" class="img-fluid fixed-height" alt="...">
                   </div>
                   <div class="col">
-                    <img src="images/Image 2.png" class="img-thumbnail" alt="...">
+                    <img src="images/demon slayer.webp" class="img-fluid fixed-height" alt="...">
                   </div>
                   <div class="col">
-                    <img src="images/Image 3.png" class="img-thumbnail" alt="...">
+                    <img src="images/Image 3.png" class="img-fluid fixed-height" alt="...">
                   </div>
                   <div class="col">
-                    <img src="images/Image 4.png" class="img-thumbnail" alt="...">
+                    <img src="images/Image 4.png" class="img-fluid fixed-height" alt="...">
                   </div>
                 </div>
                 <div class="row align-items-center">
                   <div class="col">
-                    <img src="images/Image 5.png" class="img-fluid" alt="...">
+                    <img src="images/Image 5.png" class="img-fluid fixed-height" alt="...">
                   </div>
                   <div class="col">
-                    <img src="images/Image 6.png" class="img-fluid" alt="...">
+                    <img src="images/Image 6.png" class="img-fluid fixed-height" alt="...">
                   </div>
                   <div class="col">
-                    <img src="images/Image 7.png" class="img-fluid" alt="...">
+                    <img src="images/Image 7.png" class="img-fluid fixed-height" alt="...">
                   </div>
                   <div class="col">
-                    <img src="images/Image 8.png" class="img-fluid" alt="...">
+                    <img src="images/Image 8.png" class="img-fluid fixed-height" alt="...">
                   </div>
                 </div>
               </div>
+              
         </section>
     </main>
 
