--- a/pages/signup.html
+++ b/pages/signup.html
@@ -149,7 +149,7 @@
 						<input placeholder="Password" name="password" type="password" tabindex="4" required>
 					</fieldset>
 				</div>
-				<div class="confirmPswd">
+				<div class="pswd">
 					<fieldset>
 						<input placeholder="Confirm password" name="cnfm" type="password" tabindex="5" required>
 					</fieldset>
