--- a/pages/signin.html
+++ b/pages/signin.html
@@ -127,7 +127,7 @@
                 
 				<div class="mail">
                     <fieldset>
-                        <input placeholder="Username or Email" name="email" type="text" tabindex="1" required>
+                        <input placeholder="Email" name="email" type="text" tabindex="1" required>
                     </fieldset>
 				</div>
 
