--- a/Pages/homepage.html
+++ b/Pages/homepage.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="../css/homepage.css">
 </head>
 <body>
     <header> 
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-6">
-                    <img src="images/logo.png" class="img-fluid" alt="Nihon Mystica" style="width: 100px; height: auto;">
+                    <img src="../images/logo.png" class="img-fluid" alt="Nihon Mystica" style="width: 100px; height: auto;">
                 </div>
                 <div class="col-6 text-end">
                     <nav>
@@ -44,7 +44,7 @@
                             <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link">
-                                    <img src="images/Watchlist icon.png" alt="Watchlist Icon" style="width: 16px; height: 16px; margin-right: 5px;">
+                                    <img src="../images/Watchlist icon.png" alt="Watchlist Icon" style="width: 16px; height: 16px; margin-right: 5px;">
                                     Watchlist
                                 </a>
                             </li>
@@ -54,7 +54,7 @@
                                 <form id="searchForm">
                                     <input type="text" id="searchInput" placeholder="Search..." class="search-input">
                                     <button type="submit" class="search-button">
-                                        <img src="images/search icon.png" alt="Search" class="search-icon">
+                                        <img src="../images/search icon.png" alt="Search" class="search-icon">
                                     </button>
                                 </form>
                             </li>                               
@@ -83,7 +83,7 @@
             <div id="gameCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/40ce0eb5a493a22036dd38853e55a0b2.png" class="d-block w-100" alt="Game 1">
+                        <img src="../images/40ce0eb5a493a22036dd38853e55a0b2.png" class="d-block w-100" alt="Game 1">
                         <div class="carousel-caption d-none d-md-block">
                             <pre class="code-block">
                                 hello world!
@@ -93,14 +93,14 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/ede207095a48f0b2ccc60fe9916fbb4e.jpg" class="d-block w-100" alt="Game 2">
+                        <img src="../images/ede207095a48f0b2ccc60fe9916fbb4e.jpg" class="d-block w-100" alt="Game 2">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Samurai’s Echo</h5>
                             <p>Unveil the secrets of a long-forgotten world.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/tokyo-ghoul-wallpaper-1920x1080-v0-kebt8gaksey91.webp" class="d-block w-100" alt="Game 3">
+                        <img src="../images/tokyo-ghoul-wallpaper-1920x1080-v0-kebt8gaksey91.webp" class="d-block w-100" alt="Game 3">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Koi Legends</h5>
                             <p>Dive into a mystical journey through koi-filled waters.</p>
@@ -127,44 +127,44 @@
                 <div class="row align-items-start">
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="images/jujutsu kaisen.jpe" class="img-fluid fixed-size" alt="Jujutsu Kaisen">
+                            <img src="../images/jujutsu kaisen.jpe" class="img-fluid fixed-size" alt="Jujutsu Kaisen">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="images/demon slayer.webp" class="img-fluid fixed-size" alt="Demon Slayer">
+                            <img src="../images/demon slayer.webp" class="img-fluid fixed-size" alt="Demon Slayer">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="images/filters_quality(95)format(webp).webp" class="img-fluid fixed-size" alt="Filters">
+                            <img src="../images/filters_quality(95)format(webp).webp" class="img-fluid fixed-size" alt="Filters">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="images/frieren.avif" class="img-fluid fixed-size" alt="Frieren">
+                            <img src="../images/frieren.avif" class="img-fluid fixed-size" alt="Frieren">
                         </div>
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
