movies library add on

--- a/Pages/homepage.html
+++ b/Pages/homepage.html
@@ -21,10 +21,12 @@
                     <nav>
                         <ul class="nav">
                             <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                            
+                            <li class="nav-item">
+                                <a href="movieslibrary.html" class="nav-link">Anime</a>
+                            </li>
                             <!-- Updated Anime Section with Dropdown -->
                             <li class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" id="animeDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Anime</a>
+                                <a href="#" class="nav-link dropdown-toggle" id="animeDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Genres</a>
                                 <ul class="dropdown-menu" aria-labelledby="animeDropdown">
                                     <li><a href="#" class="dropdown-item">Action</a></li>
                                     <li><a href="#" class="dropdown-item">Adventure</a></li>
