--- a/Pages/movieslibrary.html
+++ b/Pages/movieslibrary.html
@@ -278,6 +278,100 @@
                         </div>
                     </div>
                 </div>
+                <div class="container">
+                    <h2>Adventure</h2>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <h2>Comedy</h2>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="img-wrapper">
+                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                        </div>
+                    </div>
+                </div>
             </div>
             
         </section>
