--- a/Pages/movieslibrary.html
+++ b/Pages/movieslibrary.html
@@ -284,44 +284,44 @@
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                            <img src="../images/Made in abyss.jpe" class="img-fluid fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                            <img src="../images/hunter x hunter.avif" class="img-fluid fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                            <img src="../images/the rising of the shield hero.jpe" class="img-fluid fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                            <img src="../images/no game no life.jpe" class="img-fluid fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                            <img src="../images/the promised neverland.avif" class="img-fluid fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                            <img src="../images/magi the labyrinth of magic.jpe" class="img-fluid fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                            <img src="../images/grimgar ashes and illusions.jpe" class="img-fluid fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                            <img src="../images/log horizon.avif" class="img-fluid fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
@@ -331,44 +331,44 @@
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                            <img src="../images/asobi asobase.avif" class="img-fluid fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                            <img src="../images/nichijou.jpe" class="img-fluid fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                            <img src="../images/haven't you heard i'm sakamoto.avif" class="img-fluid fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                            <img src="../images/monthly girls nozaki kun.avif" class="img-fluid fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/solo leveling.avif" class="img-fluid fixed-size" alt="Solo Leveling">
+                            <img src="../images/gintama.avif" class="img-fluid fixed-size" alt="Solo Leveling">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/undead unluck.webp" class="img-fluid fixed-size" alt="Undead Unluck">
+                            <img src="../images/the devil is a part timer.jpe" class="img-fluid fixed-size" alt="Undead Unluck">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/attack on titan.avif" class="img-fluid fixed-size" alt="Attack on Titan">
+                            <img src="../images/school rumble.jpe" class="img-fluid fixed-size" alt="Attack on Titan">
                         </div>
                     </div>
                     <div class="col">
                         <div class="img-wrapper">
-                            <img src="../images/fate.jpe" class="img-fluid fixed-size" alt="Fate">
+                            <img src="../images/kaguya sama love is war.avif" class="img-fluid fixed-size" alt="Fate">
                         </div>
                     </div>
                 </div>
