--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,7 +4,7 @@
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
 
-	  <link rel="stylesheet" href="../main.css">
+	  <link rel="stylesheet" href="../css/sign.css">
 	  <link rel="preconnect" href="https://fonts.googleapis.com">
 	  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
@@ -149,7 +149,7 @@
 						<input placeholder="Password" name="password" type="password" tabindex="4" required>
 					</fieldset>
 				</div>
-				<div class="pswd">
+				<div class="confirmPswd">
 					<fieldset>
 						<input placeholder="Confirm password" name="cnfm" type="password" tabindex="5" required>
 					</fieldset>
