--- a/pages/singleview.html
+++ b/pages/singleview.html
@@ -97,12 +97,12 @@
     <div class="absolute-text-jp d-flex">鬼滅の刃</div>
   </div>
 
-  <div class="star-container">
-    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
-    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
-    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
-    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
-    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon">
+  <div class="star-container" id="starRating">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon" data-index="1">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon" data-index="2">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon" data-index="3">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon" data-index="4">
+    <img class="star-icon" src="../assets/images/star.svg" alt="Star Icon" data-index="5">
   </div>
 
     <button class="watchlist-container d-flex">
@@ -159,7 +159,6 @@
 </footer>
   	
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
-
-
