--- a/Pages/movieslibrary.html
+++ b/Pages/movieslibrary.html
@@ -82,7 +82,23 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet.</p>-->
             </div>
         </section>
-
+        
+        <!-- HTML for Anime Carousel -->
+        <section class="carousel-section">
+            <div id="animeCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner" id="animeCarouselInner">
+                    <!-- Anime items will be injected here by JavaScript -->
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#animeCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#animeCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
 
 
         <section class="products">
@@ -136,6 +152,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="container">
                     <h2>Recent Releases</h2>
                 </div>
