--- a/Pages/movieslibrary.html
+++ b/Pages/movieslibrary.html
@@ -651,6 +651,8 @@
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
+</body>
 </body>
 </html>
 
