--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="/Pages/watchlist.html" class="nav-link">
                                     <img src="../images/Watchlist icon.png" alt="Watchlist Icon" style="width: 16px; height: 16px; margin-right: 5px;">
                                     Watchlist
                                 </a>
